Modified API to accomplish requirements
